Handle missing source location in CLI formatter output